# wellbeing-check-in-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  context_collector.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.github/workflows/: ci.yml
docs/: impl.md  implementation.md  persona.md  prd.md  tech.md
src/: __init__.py
src/app/: __init__.py  dependencies.py  main.py
src/app/api/: endpoints.py  models.py
src/app/llm/: prompts.py
src/app/orchestration/: __init__.py  constants.py  graph.py  graph_definition.py  graph_logic.py  state.py
src/app/services/: llm_client.py
tests/: __init__.py  test_main.py
tests/api/: test_endpoints.py
tests/e2e/: test_full_flow.py
tests/integration/: test_agent_flow.py
tests/orchestration/: __init__.py  test_graph_logic.py  test_graph_nodes.py  test_state.py
tests/services/: test_llm_client.py
